[package]
name = "riscbench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
filetime = "0.2.22"
rfd = "0.12.0"
rv_sim = {git = "https://github.com/mercurius-rl/rv-sim"}
